--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="intro-section-div">
             <p class="red-text">Music is like a dream</p>
             <p class="p-big-1">Without music, life would be a mistake</p>
-            <a href="test.html" class="shop-link">Go to shop</a>
+            <a href="" class="shop-link">Go to shop</a>
         </div>
     </section>
 
